# SlicerMatlabBridge

./: CMakeLists.txt  README.md
Docs/: MatlabBridgeDesign.pptx
Docs/logo/: MatlabBridgeLogo.xcf  MatlabModuleGenerator.xcf
Docs/tutorial/: MatlabBridgeTutorial.ppt
Examples/: FillAroundSeeds.bat  FillAroundSeeds.m  FillAroundSeeds.xml  MatlabBridgeParameterPassingTest.bat  MatlabBridgeParameterPassingTest.m
Examples/FillAroundSeeds/: FillAroundSeeds.bat  FillAroundSeeds.m  FillAroundSeeds.xml
Examples/LandmarkRegistration/: LandmarkRegistration.bat  LandmarkRegistration.m  LandmarkRegistration.xml
Examples/MatlabBridgeParameterPassingTest/: LandmarkRegistration.bat  LandmarkRegistration.m  LandmarkRegistration.xml  MatlabBridgeParameterPassingTest.bat  MatlabBridgeParameterPassingTest.m  MatlabBridgeParameterPassingTest.xml  absor.m
Examples/MeshScale/: MeshScale.bat  MeshScale.m  MeshScale.xml
MatlabCommander/: CMakeLists.txt  MatlabCommander.cxx  MatlabCommander.xml
MatlabCommander/Scripts/: cli_argsread.m  cli_argswrite.m  cli_commandserver.m  cli_imagewrite.m  cli_transformwrite.m
MatlabCommander/commandserver/: cli_commandserver.m  cli_geometryread.m  cli_geometrywrite.m  cli_imageread.m  cli_imagewrite.m  cli_lineartransformread.m  cli_lineartransformwrite.m  cli_measurementread.m  cli_measurementwrite.m  cli_pointfileread.m  cli_pointfilewrite.m  cli_pointvectordecode.m  cli_stringvectordecode.m  cli_transformread.m  cli_version.m.in  fcsvwrite.m  nrrdaddmetafield.m  nrrdread.m  nrrdwrite.m  stlread.m
MatlabModuleGenerator/: CMakeLists.txt  qSlicerMatlabModuleGeneratorModule.cxx  qSlicerMatlabModuleGeneratorModule.h  qSlicerMatlabModuleGeneratorModuleWidget.cxx  qSlicerMatlabModuleGeneratorModuleWidget.h
MatlabModuleGenerator/Logic/: vtkSlicerMatlabModuleGeneratorLogic.cxx  vtkSlicerMatlabModuleGeneratorLogic.h
MatlabModuleGenerator/Resources/Templates/: MatlabModuleTemplate  MatlabModuleTemplate.bat  MatlabModuleTemplate.m  MatlabModuleTemplate.sh  MatlabModuleTemplate.xml
MatlabModuleGenerator/Resources/UI/: qSlicerMatlabModuleGeneratorModuleWidget.ui
